# Parlex

./: .gitignore  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  translive_jni.cpp  translive_jni_stub.cpp
app/src/main/kotlin/com/translive/app/: TransLiveApp.kt
app/src/main/kotlin/com/translive/app/data/: ModelRepository.kt  SettingsRepository.kt
app/src/main/kotlin/com/translive/app/data/db/: TransLiveDatabase.kt
app/src/main/kotlin/com/translive/app/data/model/: Entities.kt  Language.kt  ModelCatalog.kt  ModelRuntime.kt  ModelVariant.kt  SttModelInfo.kt
app/src/main/kotlin/com/translive/app/di/: AppModule.kt
app/src/main/kotlin/com/translive/app/engine/: CameraTranslateEngine.kt  LiteRtTranslationEngine.kt  ModelDownloadManager.kt  OcrEngine.kt  SpeechEngine.kt  SystemTtsEngine.kt  TranslationEngine.kt  TtsEngine.kt
app/src/main/kotlin/com/translive/app/service/: DownloadService.kt
app/src/main/kotlin/com/translive/app/ui/: MainActivity.kt  TransLiveNavHost.kt
app/src/main/kotlin/com/translive/app/ui/screens/: CameraScreen.kt  (+5 more)
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: LITERT_BETA.md
tools/: litert-device-probe.ps1  litert-download-translategemma.ps1
(+9 files in other folders)
